rename folder Fetureban to Fetureban.Domain

--- a/Featureban.Runner/Featureban.Runner.csproj
+++ b/Featureban.Runner/Featureban.Runner.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Featureban\Featureban.Domain.csproj" />
+    <ProjectReference Include="..\Featureban.Domain\Featureban.Domain.csproj" />
   </ItemGroup>
 
 </Project>
