--- a/Featureban.Tests/Featureban.Tests.csproj
+++ b/Featureban.Tests/Featureban.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Featureban\Featureban.Domain.csproj" />
+    <ProjectReference Include="..\Featureban.Domain\Featureban.Domain.csproj" />
   </ItemGroup>
 
 </Project>
