add test UseDefaultTailsBehaviorsSettings_OnCreate

--- a/Featureban.Tests/Featureban.Tests.csproj
+++ b/Featureban.Tests/Featureban.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Featureban.Domain\Featureban.Domain.csproj" />
+    <ProjectReference Include="..\Featureban.Runner\Featureban.Runner.csproj" />
   </ItemGroup>
 
 </Project>
